Entity Framework and Identity

--- a/BullyBook/appsettings.json
+++ b/BullyBook/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BullyBook-5181386F-214F-4575-9A61-AB43B36013AC;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=CYBERTRON\\MSSQLSERVER2019;Database=BullyBook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
